--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,6 @@
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 
-	RewriteRule ^(.+)$ index.php/$1 [QSA]
+	RewriteRule ^(.+)$ index.php?url=$1 [QSA]
 
 </IfModule> 
